# pici

./: 404.html  LICENSE  README.md  contribution_behaviour.ipynb  dash_contributors_vs_posts.py  dash_number_of_contributions_per_week.py  dash_posts.py  index.html  index.md  mkdocs.yml  notes.md  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_multiple_communities-Copy1.ipynb  text-analysis.ipynb
.github/workflows/: mkdocs-gh-pages.yml
analyzing/: index.html
docs/: analyzing.md  examples.md  extending.md  gen_ref_pages.py  getting-started.md  guide.md  index.md  indicators.md  indicators_old.md  usage.md  using.md
docs/examples/: Creating a custom indicator.ipynb  Evaluating indicators.ipynb  Loading the toolbox.ipynb  Metrics and reports.ipynb
docs/extra/: peerinnovation.css
examples/: examples.md  index.html
extending/: index.html
extra/: gen_ref_pages.py  peerinnovation.css
guide/: index.html  index.md
indicators/: index.html
indicators_old/: index.html
overrides/: main.html
pici/: __init__.py  community.py  datatypes.py  decorators.py  helpers.py  labelling.py  pici.py  pici_jupyter.py  pipelines.py  registries.py  reporting.py  visualizations.py
search/: search_index.json
stash/: dash_contributors_vs_posts.py  dash_number_of_contributions_per_week.py  dash_posts.py  test_multiple_communities-Copy1.ipynb
static/: df_all_communities_contributors_vs_posts.csv  df_all_communities_num_posts_per_week.csv  df_all_communities_num_posts_per_week.xlsx  pici_jupyter.py
tests/: test_pici.py
using/: index.html
(+141 files in other folders)
